test/modules/deitz/test_module_class_conflict1b.good
test_module_class_conflict1b.chpl:9: error: Illegal super class
