test/modules/deitz/test_module_class_conflict1b.chpl
module MC {
  class MC {
    var x: int;
  }
}

module M1 {
  use MC except *;
  class C: MC {
    var y: int;
  }

  proc main {
    var c = new unmanaged C();
    writeln(c);
    delete c;
  }
}
